--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
         type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
         type="text/css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <script src="https://kit.fontawesome.com/7443d15568.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js"
@@ -21,7 +22,6 @@
 
     {% block content %}
     {% endblock %}
-    
-    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+
 </body>
 </html>
