--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
 
-        {% for produkt in produkte %}
-            <p>{{ produkt["marke"] }} {{ produkt["modell"] }} -- {{ produkt["technische_daten"]["motor"] }}</p>
-        {% endfor %}
-
-        
     <div class="main-cont">
         <!-- Header -->
         <header>
@@ -13,7 +8,7 @@
             <div class="header-content">
                 <!-- Logo -->
                 <div class="logo">
-                    <a href="#">
+                    <a href="{{ url_for('index') }}">
                         <img class="logo-img"
                             src="https://res.cloudinary.com/dxcrd5sos/image/upload/v1641791579/coepmobiles-logo-1_xyywtv.png"
                             alt="">
@@ -22,12 +17,11 @@
                 <!-- Navigation -->
                 <nav>
                     <ul class="navs">
-                        <li class="nr"><a href="#"><i class="fas fa-phone-alt"></i> 030-278791-0</a></li>
+                        <li class="nr"><a href="tel:+49302787910"><i class="fas fa-phone-alt"></i> 030-278791-0</a></li>
                         <li><a href="#home-bg">Home</a></li>
                         <li><a href="#products-cont">Über Uns</a></li>
                         <li><a href="#uber">Produkte</a></li>
                         <li><a href="#footer">Kontakt / Info</a></li>
-
                     </ul>
                 </nav>
             </div>
@@ -42,7 +36,7 @@
                 </div>
                 <div class="collapsed-header-icons flex-center">
                     <div class="header-icons-box">
-                        <a href="#"><i class="fas fa-phone-alt"></i></a>
+                        <a href="tel:+49302787910"><i class="fas fa-phone-alt"></i></a>
                         <a href="#footer"><i class="fas fa-map-marker-alt"></i></a>
                     </div>
                     <div onclick="toggleSlideInMenu()" class="menu-btn">
@@ -252,7 +246,7 @@
                         data-aos-duration="300">
                         <div class="card">
                             <div class="card-img-top">
-                                <a href="" class="produkt-img-link"></a>
+                                <a href="{{ url_for('produkt') }}" class="produkt-img-link"></a>
                                 <img src="https://res.cloudinary.com/dxcrd5sos/image/upload/v1642649244/Fengon-3_v4azac.jpg"
                                     alt="Card image cap">
                             </div>
@@ -530,5 +524,8 @@
             </div>
         </footer>
     </div>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 
 {% endblock %}
