--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,7 +72,36 @@ ul
 }
 
 
+/* ----------------------------------------------- SCROLLBAR */
 
+/* Scrollbar (width) */
+::-webkit-scrollbar
+{
+    width: 5px;
+}
+
+/* Scrollbar Track (background) */
+::-webkit-scrollbar-track
+{
+    background: #333;
+    background: #555;
+}
+
+/* Scrollbar Thumb */
+::-webkit-scrollbar-thumb
+{
+    background: #888;
+/*            background: #fff;*/
+/*            background: #555;*/
+    border-radius: 5px;
+}
+
+/* HOVER - Scrollbar Thumb */
+::-webkit-scrollbar-thumb:hover 
+{
+    background: #555;
+    background: #888;
+}
 
 
 /* ---------------------------------------------------- COLLAPSED HEADER (MOBILE) */
@@ -178,20 +207,31 @@ ul
     font-weight: 500;
 }
 
-.navs li:hover
-{
-    border-bottom: solid 1px #fff;
-    color: #fff;
-}
-
 .navs li:hover a
 {
     color: #fff !important;
-    border-bottom: solid 1px #fff;
+}
+
+/* Lines under Nav links - Hover */
+.navs li a:before
+{
+    content: '';
+    position: absolute;
+    bottom: -.2rem;
+    height: 2px;
+    background: #fff;
+    width: 0%;
+    transition: .2s;
+    transform-origin: left;
+}
+
+.navs li:hover a:before
+{
+    width: 100%;
 }
 
 
-/* ---------------------------------------------------- TABLET/MOBILE HEADER SLIDE IN MENU */
+/* ---------------------------------------------------- TABLET / MOBILE HEADER SLIDE IN MENU */
 
 .slide-in-bg
 {
@@ -272,6 +312,16 @@ ul
 /*            text-shadow: 2px 2px 0px rgba(0,0,0,.8);*/
 }
 
+.slide-in-navs nav ul li a
+{
+    display: flex;
+    align-items: center;
+}
+
+.menu-icon
+{
+    margin-right: 1rem;
+}
 
 
 /* ---------------------------------------------------- SIDE NAVIGATION */
@@ -314,6 +364,8 @@ header
     left: 0;
     width: 100%;
     height: 80px;
+    /* !!!! des.  */
+    /* font-size: 14px; */
     background: var(--grayish-color);
     padding: 0 3em;
     padding: 0 5em;
@@ -378,6 +430,12 @@ header .header-content nav ul
 
 /* ---------------------------------------------------- HOME CONTAINER */
 
+.top-space
+{
+    height: 80px;
+    width: 100%;
+}
+
 .home-cont
 {
     position: relative;
@@ -395,7 +453,7 @@ header .header-content nav ul
     width: 100vw;
     height: 125vh;
 /*            !!! evtl height */
-    background: url("https://res.cloudinary.com/dxcrd5sos/image/upload/v1646494013/image0_3_oxpo1m.jpg");
+    background: url("https://res.cloudinary.com/dxcrd5sos/image/upload/v1648757478/homebg_lfvc2x.jpg");
 /*            !!! */
     background-size: cover; 
     -webkit-box-shadow: 0 10px 20px -6px rgba(0,0,0,.4);
@@ -745,6 +803,7 @@ header .header-content nav ul
     left: 50%;
     transform: translate(-50%, -50%);
     width: 14em;
+    max-width: 96%;
     height: 1px;
     background: var(--redish-color);
 }
@@ -923,7 +982,6 @@ header .header-content nav ul
 .price
 {
     font-size: 2em;
-    font-size: 2.1em;
     margin-bottom: 0.1em;
 }
 
@@ -1069,57 +1127,55 @@ footer
 
 .popup-window
 {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    overflow-x: hidden;
-    overflow-y: scroll;
     width: 100vw;
-    padding-top: 3em;
     padding-top: 2em;
+    padding-top: 1.5em;
+/*            !!! des. */
     min-height: 100vh;
-    z-index: 99999999999;
     background: #fff;
 }
 
+/* Car Name */
 .popup-name
 {
-    font-size: 2.1em;
-    font-weight: 400;
+    font-size: 2em;
     font-weight: 500;
     margin-bottom: .5em;
+/*            evtl < 768px; */
 /*            margin-bottom: .3em;*/
+/*            !!! des. */
     text-transform: capitalize;
 }
 
+/* Popup Image Container - Holds Image & Data Box */
 .popup-image-cont
 {
     position: relative;
     display: grid;
     grid-template-columns: 8fr 4fr;
     background: #313131;
-/*            height: 34em;*/
 }
 
+/* Popup Image Box */
 .popup-image-box
 {
     position: relative;
-/*            height: 34em;*/
+    cursor: pointer;
 }
 
 .popup-image-box img
 {
     width: 100%;
-/*            height: 34em;*/
     object-fit: cover;
     
 }
-
+/*        !!! 2x */
 .popup-image
 {
     object-fit: cover;
 }
 
+/* Image Arrows */
 .image-arrow
 {
     position: absolute;
@@ -1128,11 +1184,18 @@ footer
     height: 50px;
     border-radius: 50%;
     transform: translateY(-50%);
-    z-index: 999999999;
-    background: lightgray;
-/*            background: rgb(211,211,211,.7);*/
+    background: rgb(211,211,211,.7);
     font-size: 1.5em;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    transition: .2s;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+        rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    z-index: 999;
+}
+
+.image-arrow:hover
+{
+    background: rgb(211,211,211, 1);
 }
 
 .image-arrow.arrow-l
@@ -1144,12 +1207,6 @@ footer
 {
     right: -26px;
 }
-
-
-
-
-
-
 
 .popup-price-cont
 {
@@ -1164,7 +1221,6 @@ footer
 .popup-price
 {
     font-size: 1.8em;
-    font-size: 2.1em;
     font-weight: 500;
     font-weight: 600;
     padding-left: .5em;
@@ -1273,9 +1329,11 @@ footer
 {
     width: 100%;
     display: flex;
+    cursor: pointer;
     font-size: 1.6em;
     margin-bottom: 1.5em;
     align-items: center;
+    
     justify-content: space-between;
 }
 
@@ -1314,7 +1372,7 @@ footer
 .popup-icon-data-cont
 {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 }
 
 .popup-icon-data
@@ -1660,10 +1718,10 @@ hr
         display: none !important;
     }
     
-    .container .popup-main-data-cont.beschr
+    /* .container .popup-main-data-cont.beschr
     {
         grid-template-columns: 12fr 0fr !important;
-    }
+    } */
     
     .popup-main-data-cont .technische-daten .slide-in-data.beschr,
     .slide-in-data.beschr
@@ -1688,6 +1746,11 @@ hr
 
 @media only screen and (max-width: 1200px)
 {
+    .popup-name
+    {
+        margin-bottom: 1em;
+    }
+
     .img-cont .member-desc
     {
         font-size: 10px;
@@ -1750,8 +1813,8 @@ hr
     {
         position: fixed;
         padding: 0 3em;
-        height: 80px;
-/*                !! 80px? 2x */
+        /* height: 60px; */
+/*                !! 60px? des. */
     }
     
     /* Swaps header content (to tablet/mobile header) */
@@ -1786,6 +1849,11 @@ hr
 
 @media only screen and (max-width: 993px)
 {
+    .img-arrow-slider-cont img.selected
+    {
+        min-height: auto !important;
+    }
+
     .members-cont
     {
         grid-template-columns: 1fr 1fr !important;
@@ -1831,7 +1899,6 @@ hr
     }
     
     .popup-beschr-data 
-/*            !!!!! */
     {
         padding-right: 0 !important;
     }
@@ -1839,7 +1906,18 @@ hr
 
 @media only screen and (max-width: 768px)
 {
-/* Popup */
+    .img-popup-cont .main-img img
+    {
+        transform: scale(1);
+    }
+
+    .popup-car-data,
+    .popup-size-data,
+    .popup-beschr-data
+    {
+        font-size: 14px;
+    }
+    
     .members-cont
     {
         grid-template-columns: 1fr !important;
@@ -1920,7 +1998,8 @@ hr
 
 @media only screen and (max-width: 650px)
 {
-    header
+    header,
+    .main-cont .top-space
     {
         height: 60px;
     }
@@ -1933,8 +2012,6 @@ hr
     }
     .logo-img
     {
-/* !!! des. */
-        transform: scale(.9);
         transform: scale(.85);
     }
 
@@ -1963,6 +2040,41 @@ hr
 
 @media only screen and (max-width: 575px)
 {
+    .container.main
+    {
+        padding-left: 0!important;
+        padding-right: 0 !important;
+    }
+    
+    .popup-name
+    {
+        padding-left: .5em;
+        padding-left: 1rem;
+    }
+    
+    .popup-price-cont
+    {
+        padding-right: .5em;
+        padding-right: 1rem;
+    }
+
+    .image-arrow
+    {
+        /* font-size: 1.2em; */
+        background: transparent;
+        box-shadow: none;
+    }
+
+    .image-arrow.arrow-l
+    {
+        left: -15px;
+    }
+
+    .image-arrow.arrow-r
+    {
+        right: -15px;
+    }
+
     header
     {
         padding: 1.5em;
@@ -1970,10 +2082,16 @@ hr
     
     .slide-in-navs
     {
-        width: 85% !important;
+        width: 100%;
         display: flex;
         align-items: flex-end;
         padding-bottom: 25%;
+        padding-left: 20%;
+    }
+
+    .slide-in-navs nav
+    {
+        width: 100%;
     }
     
     .home-content .sale-headl
@@ -1985,20 +2103,21 @@ hr
     {
         padding: 0 .5em;
     }
+
+    .home-content .sale-headl
+    {
+        font-size: 4em;
+    }
+
+    /* Red Line under Produkte */
+    .produkte-headl:before
+    {
+        bottom: -50%;
+    }
     
     .home-content span.not-v
     {
         display: none;
-    }
-    
-    .image-arrow.arrow-l 
-    {
-        left: -30px;
-    }
-    
-    .image-arrow.arrow-r 
-    {
-        right: -30px;
     }
     
     .header-icons-box
@@ -2011,22 +2130,62 @@ hr
         height: 18rem;
     }
 
+    .p-filter
+    {
+        transform: scale(.8);
+    }
+
     /* changes padding on extended data cont */
     .popup-main-data-cont.extended .popup-car-data,
     .popup-main-data-cont.extended .popup-size-data
     {
-        padding: 1.5em;
+        /* padding: 1.5em;
         padding: .5em;
         padding: .3em;
         padding-top: 2em;
-/*                padding: .8em;*/
-/*                padding: 0em;*/
-
         padding-left: 0.5em !important;
-        overflow-x: scroll;
+        overflow-x: scroll; */
+
+        padding: .3em;
+        padding-top: 1.2em;
     }
     
+    .popup-size-data,
+    .popup-beschr-data
+    {
+        transition: 0s !important;
+    }
+    
+    .popup-car-data.data-box,
+    .popup-size-data.data-box,
+    .popup-beschr-data.data-box
+    {
+/*                !!! des. */
+/*                padding: 1.5em !important;*/
+        padding: 1em 1.5em !important;
+        transition: 0s !important;
+        box-shadow: none;
+    }
+    
+    .data-headl-cont
+    {
+        font-size: 1.3em !important;
+        margin-bottom: 1em !important;
+    }
+    
+    .daten-icon img
+    {
+        transform: scale(.8) translateX(-10%);
+    }
 
+    .container .popup-main-data-cont.size.extended .popup-size-data .data-headl-cont,
+    .container .popup-main-data-cont.car.extended .popup-car-data .data-headl-cont
+    {
+        padding: 0 1em;
+/*                padding: 0em;*/
+/*                !!!!! */
+    }
+    
     
 /*            !!!!! */
     .popup-main-data-cont .technische-daten .slide-in-data,
@@ -2034,11 +2193,18 @@ hr
     {
         font-size: 10px !important;
     }
+
+    /* Slighted in Beschreibungs Txt/Spans */
+    .slide-in-data.beschr.slide-in
+    {
+        color: #000;
+        font-size: 12px !important;
+    }
     
     .slide-in-data p
     {
         color: #000;
-        font-size: 14px;
+        font-size: 12px;
     }
 
     .popup-icon-data-cont .popup-icon-data
@@ -2090,12 +2256,12 @@ hr
         font-size: 12px;
     }
 
-    /* .popup-main-data-cont.extended .popup-car-data,
+    .popup-main-data-cont.extended .popup-car-data,
     .popup-main-data-cont.extended .popup-size-data
     {
         padding-left: 0.5em !important;
         overflow-x: scroll;
-    } */
+    }
     
     .container .popup-main-data-cont.size.extended .popup-size-data .data-headl-cont,
     .container .popup-main-data-cont.car.extended .popup-car-data .data-headl-cont
@@ -2142,12 +2308,6 @@ hr
         font-size: 1.5em;
         margin-bottom: .5em;
     }
-
-    .popup-name 
-            {
-                font-size: 1.3em;
-                margin-bottom: 0.5em;
-            }
     
     #about-us-cont
     {
@@ -2175,26 +2335,33 @@ hr
     {
         padding: 2.5em 3.5em;
     }
+
+    .card-img-top
+    {
+        height: 15em;
+    }
 }
 
 
+/* !!! */
 @media only screen and (max-width: 350px)
 {
     .not-v2
     {
         display: none;
-    }
-    
-    .slide-in-navs
-    {
-        width: 100% !important;
-    }            
+    }        
 }
 
         
 @media only screen and (max-width: 768px)
 {
-    .open-t-daten-btn .fas.fa-chevron-right
+    .slide-in-navs
+    {
+        width: 100% !important;
+    }
+
+    /* Flips about us arrow down on tablet/mobile */
+    .fa-chevron-right.about
     {
         transform: rotate(90deg);
     }
@@ -2207,6 +2374,12 @@ hr
     #about-us-cont.extended
     {
         height: auto !important;
+    }
+
+    .data-box
+    {
+        font-size: 12px;
+        overflow: hidden;
     }
 }
 
@@ -2255,33 +2428,59 @@ hr
 
 /* Landscape (Mobile) */
 @media only screen and (max-width : 1000px) and (max-height: 650px) and (orientation : landscape)
-        {
-            .img-popup-cont
-            {
+{
+    .img-popup-cont
+    {
 /*                min-height: 95vh;*/
-                padding: 1em;
-                padding-top: .5em;
-                max-height: 100vh;
-            }
-            
-            .close-img-popup-btn
-            {
-                top: 5%;
-                right: 5%;
-            }
-            
-            .main-img
-            {
-                padding-bottom: 5px;
-                transform: scale(1.3);
-            }
+        padding: 1em;
+        padding-top: .5em;
+        max-height: 100vh;
+    }
+    
+    .main-img
+    {
+        padding-bottom: 5px;
+        transform: scale(1.3);
+    }
 
-            .sub-img
-            {
-                width: 10%;
-            }
-        }
+    .sub-img
+    {
+        width: 10%;
+    }
+}
 
+
+@media only screen and (max-width: 1000px) and (orientation: landscape)
+{
+    header
+    {
+        height: 50px;
+    }
+    
+    .top-space
+    {
+        height: 50px !important;
+    }
+    
+    .slide-in-navs
+    {
+        width: 65%;
+        padding-top: 12%;
+        padding-left: 15%;
+        padding-bottom: 3% !important;
+    }
+    
+    .slide-in-navs nav ul li
+    {
+        margin-bottom: .5rem;
+        font-size: .9em;
+    }
+
+    .sub-headl
+    {
+        margin-bottom: 3em;
+    }
+}
 
 
 /* POPUP IMAGE CONTAINER */
@@ -2372,11 +2571,6 @@ hr
 .img-popup-cont
 {
     padding: 2.5em 1em;
-}
-
-.img-popup-cont
-{
-    /* min-height: 90vh; */
     max-height: 95vh;
 }
 
@@ -2386,3 +2580,24 @@ hr
     top: 5%;
 }
 
+.img-arrow-slider-cont
+{
+    position: relative;
+}
+
+.img-arrow-slider-cont img.selected
+{
+    position: relative;
+    z-index: 9;
+    box-shadow: none !important;
+    min-height: 391px;
+    max-height: 494px;
+}
+
+.img-arrow-slider-cont img
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
